feat(auth): show error messages for checkboxes, radio buttons and photo

--- a/app/src/main/res/layout/fragment_sign_up_1.xml
+++ b/app/src/main/res/layout/fragment_sign_up_1.xml
@@ -143,8 +143,16 @@
             android:text="@string/agreement"
             android:textSize="12sp"
             android:textColor="@color/darkGray"
-            app:buttonTint="@color/violet"
-            android:layout_marginBottom="24dp"/>
+            app:buttonTint="@color/violet" />
+
+        <TextView
+            android:id="@+id/chkError"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/red"
+            android:textSize="12sp"
+            android:paddingHorizontal="31dp"
+            android:visibility="gone" />
 
     </LinearLayout>
 
