--- a/app/src/main/res/layout/fragment_sign_up_3.xml
+++ b/app/src/main/res/layout/fragment_sign_up_3.xml
@@ -166,8 +166,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:layout_marginBottom="24dp">
+            android:gravity="center_vertical">
 
             <ImageView
                 android:id="@+id/btnUploadPassport"
@@ -186,6 +185,15 @@
                 android:textColor="@color/blueGray"
                 android:layout_marginStart="12dp"/>
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/photoError"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/red"
+            android:textSize="12sp"
+            android:visibility="gone"
+            android:paddingStart="12dp"/>
 
     </LinearLayout>
 
