--- a/app/src/main/res/layout/fragment_sign_up_2.xml
+++ b/app/src/main/res/layout/fragment_sign_up_2.xml
@@ -50,19 +50,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/surname"
-            android:textSize="14sp"
             android:textColor="@color/gray"/>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/lastNameLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:boxBackgroundMode="outline"
             app:boxStrokeColor="@color/lightGrey"
-            android:textColorHint="@color/blueGray"
-            app:boxCornerRadiusTopStart="8dp"
-            app:boxCornerRadiusTopEnd="8dp"
-            app:boxCornerRadiusBottomStart="8dp"
-            app:boxCornerRadiusBottomEnd="8dp">
+            android:textColorHint="@color/blueGray">
+
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etLastName"
                 android:layout_width="match_parent"
@@ -76,19 +73,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/name"
-            android:textSize="14sp"
             android:textColor="@color/gray"/>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/firstNameLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:boxBackgroundMode="outline"
             app:boxStrokeColor="@color/lightGrey"
-            android:textColorHint="@color/blueGray"
-            app:boxCornerRadiusTopStart="8dp"
-            app:boxCornerRadiusTopEnd="8dp"
-            app:boxCornerRadiusBottomStart="8dp"
-            app:boxCornerRadiusBottomEnd="8dp">
+            android:textColorHint="@color/blueGray">
+
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etFirstName"
                 android:layout_width="match_parent"
@@ -102,19 +96,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/patronymic"
-            android:textSize="14sp"
             android:textColor="@color/gray"/>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/middleNameLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:boxBackgroundMode="outline"
             app:boxStrokeColor="@color/lightGrey"
-            android:textColorHint="@color/blueGray"
-            app:boxCornerRadiusTopStart="8dp"
-            app:boxCornerRadiusTopEnd="8dp"
-            app:boxCornerRadiusBottomStart="8dp"
-            app:boxCornerRadiusBottomEnd="8dp">
+            android:textColorHint="@color/blueGray">
+
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etMiddleName"
                 android:layout_width="match_parent"
@@ -128,8 +119,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/date_of_birth"
-            android:textSize="14sp"
             android:textColor="@color/gray"/>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/birthDateLayout"
             android:layout_width="match_parent"
@@ -137,30 +128,25 @@
             app:boxBackgroundMode="outline"
             app:boxStrokeColor="@color/lightGrey"
             android:textColorHint="@color/blueGray"
-            app:boxCornerRadiusTopStart="8dp"
-            app:boxCornerRadiusTopEnd="8dp"
-            app:boxCornerRadiusBottomStart="8dp"
-            app:boxCornerRadiusBottomEnd="8dp"
             app:startIconDrawable="@drawable/ic_calendar"
             app:startIconTint="@color/darkGray">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etBirthDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/date_hint"
-            android:paddingStart="40dp"
-            android:paddingVertical="12dp"
-            android:focusable="true"
-            android:clickable="true"/>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etBirthDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/date_hint"
+                android:paddingVertical="12dp"
+                android:focusable="true"
+                android:clickable="true"/>
     </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sex"
-            android:textSize="14sp"
             android:textColor="@color/gray"/>
+
         <RadioGroup
             android:id="@+id/rgGender"
             android:layout_width="match_parent"
