--- a/app/src/main/res/layout/fragment_sign_up_3.xml
+++ b/app/src/main/res/layout/fragment_sign_up_3.xml
@@ -70,19 +70,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/driver_license_number"
-            android:textSize="14sp"
             android:textColor="@color/gray"/>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/licenseLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:boxBackgroundMode="outline"
             app:boxStrokeColor="@color/lightGrey"
-            android:textColorHint="@color/blueGray"
-            app:boxCornerRadiusTopStart="8dp"
-            app:boxCornerRadiusTopEnd="8dp"
-            app:boxCornerRadiusBottomStart="8dp"
-            app:boxCornerRadiusBottomEnd="8dp">
+            android:textColorHint="@color/blueGray">
+
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etLicense"
                 android:layout_width="match_parent"
@@ -96,8 +93,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/date_of_issue"
-            android:textSize="14sp"
             android:textColor="@color/gray"/>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/licenseDateLayout"
             android:layout_width="match_parent"
@@ -105,10 +102,6 @@
             app:boxBackgroundMode="outline"
             app:boxStrokeColor="@color/lightGrey"
             android:textColorHint="@color/blueGray"
-            app:boxCornerRadiusTopStart="8dp"
-            app:boxCornerRadiusTopEnd="8dp"
-            app:boxCornerRadiusBottomStart="8dp"
-            app:boxCornerRadiusBottomEnd="8dp"
             app:startIconDrawable="@drawable/ic_calendar"
             app:startIconTint="@color/violet">
 
@@ -116,20 +109,19 @@
                 android:id="@+id/etLicenseDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/date_hint"
-                android:paddingStart="40dp"
-                android:paddingVertical="12dp"
+                android:clickable="true"
                 android:focusable="true"
-                android:clickable="true"/>
+                android:hint="@string/date_hint"
+                android:paddingVertical="12dp" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/upload_driver_license"
-            android:textSize="14sp"
             android:textColor="@color/gray"
             android:layout_marginBottom="4dp"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -150,18 +142,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/upload_photo"
-                android:textSize="14sp"
                 android:textColor="@color/blueGray"
                 android:layout_marginStart="12dp"/>
+
         </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/upload_passport"
-            android:textSize="14sp"
             android:textColor="@color/gray"
             android:layout_marginBottom="4dp"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -181,7 +173,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/upload_photo"
-                android:textSize="14sp"
                 android:textColor="@color/blueGray"
                 android:layout_marginStart="12dp"/>
         </LinearLayout>
@@ -192,8 +183,9 @@
             android:layout_height="wrap_content"
             android:textColor="@color/red"
             android:textSize="12sp"
-            android:visibility="gone"
-            android:paddingStart="12dp"/>
+            android:visibility="invisible"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="4dp"/>
 
     </LinearLayout>
 
