--- a/app/src/main/res/layout/fragment_getting_started.xml
+++ b/app/src/main/res/layout/fragment_getting_started.xml
@@ -52,6 +52,6 @@
         android:textColor="@color/violet"
         android:text="@string/register"
         android:textSize="16sp"
-        app:strokeColor="@color/lightGrey"
+        app:strokeColor="@color/lightGray"
         app:strokeWidth="1dp" />
 </LinearLayout>
