--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -181,6 +181,9 @@
         android:id="@+id/profileFragment"
         android:name="com.example.drivenextapp.ui.settings.ProfileFragment"
         android:label="Profile">
+        <action
+            android:id="@+id/action_profileFragment_to_gettingStartedFragment"
+            app:destination="@id/gettingStartedFragment" />
     </fragment>
 
     <fragment
