--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -154,6 +154,30 @@
         <action
             android:id="@+id/action_homepageFragment_to_gettingStartedFragment"
             app:destination="@id/gettingStartedFragment" />
+        <action
+            android:id="@+id/action_homepageFragment_to_resultFragment"
+            app:destination="@id/resultFragment" />
+        <action
+            android:id="@+id/action_homepageFragment_to_checkoutFragment"
+            app:destination="@id/checkoutFragment" />
+        <action
+            android:id="@+id/action_homepageFragment_to_carDetailsFragment"
+            app:destination="@id/carDetailsFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/resultFragment"
+        android:name="com.example.drivenextapp.ui.search.ResultFragment"
+        android:label="Result">
+        <action
+            android:id="@+id/action_resultFragment_to_homepageFragment"
+            app:destination="@id/homepageFragment" />
+        <action
+            android:id="@+id/action_resultFragment_to_checkoutFragment"
+            app:destination="@id/checkoutFragment" />
+        <action
+            android:id="@+id/action_resultFragment_to_carDetailsFragment"
+            app:destination="@id/carDetailsFragment" />
     </fragment>
 
     <fragment
@@ -196,5 +220,29 @@
         android:id="@+id/becomeHostFragment"
         android:name="com.example.drivenextapp.ui.addCar.BecomeHostFragment"
         android:label="Become host">
+    </fragment>
+
+    <fragment
+        android:id="@+id/checkoutFragment"
+        android:name="com.example.drivenextapp.ui.bookingCar.CheckoutFragment"
+        android:label="Checkout">
+        <action
+            android:id="@+id/action_checkoutFragment_to_homepageFragment"
+            app:destination="@id/homepageFragment" />
+        <action
+            android:id="@+id/action_checkoutFragment_to_resultFragment"
+            app:destination="@id/resultFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/carDetailsFragment"
+        android:name="com.example.drivenextapp.ui.bookingCar.CarDetailsFragment"
+        android:label="Car details">
+        <action
+            android:id="@+id/action_carDetailsFragment_to_homepageFragment"
+            app:destination="@id/homepageFragment" />
+        <action
+            android:id="@+id/action_carDetailsFragment_to_resultFragment"
+            app:destination="@id/resultFragment" />
     </fragment>
 </navigation>
