--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -2,6 +2,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/settingsScroll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,13 +30,15 @@
         android:clickable="true"
         android:focusable="true">
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/imgAvatar"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:contentDescription="@string/acc_photo"
+            android:scaleType="centerCrop"
             android:src="@drawable/ic_profile_photo"
-            android:scaleType="centerCrop" />
+            app:shapeAppearanceOverlay="@style/ShapeAppearance.App.Corner.Circle"
+            />
 
         <LinearLayout
             android:orientation="vertical"
