--- a/app/src/main/res/layout/fragment_loader.xml
+++ b/app/src/main/res/layout/fragment_loader.xml
@@ -16,6 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|center_vertical"
+        android:contentDescription="@string/search_for_cars"
         android:src="@drawable/ic_car_icon" />
 
     <LinearLayout
